# hw_drf

./: .coveragerc  Dockerfile  coverage_report.txt  env.sample  lms_data.json  pyproject.toml  users_data.json
config/: settings.py  urls.py
lms/: admin.py  models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/migrations/: 0004_subscription.py
users/: models.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/migrations/: 0003_alter_user_first_name_alter_user_last_name.py  0004_payment_payment_link_payment_session_id.py  0005_alter_payment_user.py
